overflow fix

--- a/src/components/Statement.scss
+++ b/src/components/Statement.scss
@@ -89,9 +89,9 @@
 			transform: rotate(-9deg);
 		}
 	}
-
 	.rotate {
-		// overflow: hidden;
+		overflow: hidden;
+		padding: 0 50vw;
 	}
 
 	span {
